complete navigation responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,49 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: poppins;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 @font-face {
     font-family: poppins;
     font-style: normal;
     font-weight: 900;
     src: url('../fonts/poppins/poppins-bold-webfont.woff') format('woff');
 }
+
 @font-face {
     font-family: poppins;
     font-style: normal;
     font-weight: 700;
     src: url('../fonts/poppins/poppins-bold-webfont.woff') format('woff');
 }
+
 @font-face {
     font-family: poppins;
     font-style: normal;
     font-weight: 500;
     src: url('../fonts/poppins/poppins-medium-webfont.woff') format('woff');
 }
+
 @font-face {
     font-family: poppins;
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/poppins/poppins-medium-webfont.woff') format('woff');
+    src: url('../fonts/poppins/poppins-semibold-webfont.woff') format('woff');
 }
+
 @font-face {
     font-family: poppins;
     font-style: normal;
@@ -29,47 +51,152 @@
     src: url('../fonts/poppins/poppins-light-webfont.woff') format('woff');
 }
 
-:root{
-    --color-C90000:#C90000;
-    --color-7D7C7C:#7D7C7C;
-    --color-FFF6A3:#FFF6A3;
-    --color-504F4F:#504F4F;
-    --color-323232:#323232;
-    --color-FFC300:#FFC300;
-    --color-E3E3E3:#E3E3E3;
-    --color-D62822:#D62822;
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-}
-a{
-    text-decoration: none;
+:root {
+    --color_fff: #fff;
+    --color_C90000: #C90000;
+    --color_7D7C7C: #7D7C7C;
+    --color_504F4F: #504F4F;
+    --color_323232: #323232;
+    --color_FFC300: #FFC300;
+    --color_FFF6A3: #FFF6A3;
+    --color_E3E3E3: #E3E3E3;
+    --color_F1F1F1: #F1F1F1;
 }
 
-body{
-    font-family: poppins;
+.text_danger {
+    color: var(--color_C90000);
 }
 
-.container{
-    max-width: 1140px;
-    margin:0 auto;
-}
-.navigation{
+.main_header {
     margin-top: 1rem;
+}
+
+.container {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 0.5rem;
+}
+
+.navgation {
     display: grid;
-    grid-template-columns: 58px 510px 187px;
+    grid-template-columns: 58px 635px 187px;
     justify-content: space-between;
     align-items: center;
 }
 
-.navigation ul{
+.navgation ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    gap: 2.5rem;
 }
-.link-navigation{
-    justify-content: space-between;
+
+.navgation ul li:first-child a {
+    color: var(--color_C90000);
+    font-weight: 600;
+}
+
+.navgation ul li:not(:first-child) a {
+    color: var(--color_7D7C7C);
+    font-weight: 500;
+}
+
+.navgation ul li a {
+
+    font-weight: 500;
+}
+
+.link-navgation a {
+    border: 1px solid var(--color_C90000);
+    padding: 9px 16px;
+    font-size: 16px;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+
+}
+
+.link-navgation a:first-child {
+    color: var(--color_C90000);
+    font-weight: 400;
+
+}
+
+.link-navgation a:last-child {
+    background-color: var(--color_C90000);
+    color: var(--color_fff);
+    font-weight: 500;
+}
+.nav_menu_sidbar {
+    position: fixed;
+    left: 0;
+    flex-direction: column;
+    top: 0;
+    background-color: var(--color_fff);
+    padding: 1rem;
+    border-right: 2px solid var(--color_504F4F);
+    height: 100%;
+    width: 200px;
+    transform: translateX(-345px);
+    -webkit-transform: translateX(-345px);
+    -moz-transform: translateX(-345px);
+    -ms-transform: translateX(-345px);
+    -o-transform: translateX(-345px);
+    transition: all 500ms ease-in;
+    -webkit-transition: all 500ms ease-in;
+    -moz-transition: all 500ms ease-in;
+    -ms-transition: all 500ms ease-in;
+    -o-transition: all 500ms ease-in;
+}
+
+#input_menu:checked + label + ul{
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+    -moz-transform: translateX(0px);
+    -ms-transform: translateX(0px);
+    -o-transform: translateX(0px);
+}
+
+#close_icon{
+    display: none;
+    color: var(--color_504F4F);
+}
+
+#input_menu:checked + label #close_icon{
+    display: block;
+}
+
+#input_menu:checked + label svg:first-child{
+    display: none;
+}
+
+
+@media (max-width:834px) {
+    .navgation {
+        grid-template-columns: repeat(3, auto);
+    }
+
+    .link-navgation {
+        justify-self: center;
+    }
+
+    .navgation>ul {
+        display: none;
+    }
+
+    .menu-icon {
+        justify-self: flex-end;
+
+    }
+
+    
+
+}
+
+@media (min-width:835px) {
+    .menu-icon {
+        display: none;
+    }
 }
