--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ a {
     src: url('../fonts/poppins/poppins-light-webfont.woff') format('woff');
 }
 
+@font-face {
+    font-family: poppins;
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins/poppins-regular-webfont.woff') format('woff');
+}
+
 :root {
     --color_fff: #fff;
     --color_C90000: #C90000;
@@ -65,6 +72,9 @@ a {
 
 .text_danger {
     color: var(--color_C90000);
+}
+header{
+    height: 100vh;
 }
 
 .main_header {
@@ -170,6 +180,56 @@ a {
 
 #input_menu:checked + label svg:first-child{
     display: none;
+}
+
+/* header-bottom */
+.header-bottom{
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+}
+
+.content-right-header-bottom{
+
+    align-self: center;
+
+}
+.content-right-header-bottom h1{
+    color: var(--color_C90000);
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 70px;
+}
+
+.content-right-header-bottom p{
+    color: #323232;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    max-width: 70%;
+}
+
+.order-food{
+    margin-top: 1.5rem;
+}
+.text-price-order-food{
+    margin-bottom: 1rem;
+}
+.text-price-order-food span:first-child{
+    font-size: 16px;
+    font-weight: 300px;
+
+}
+.text-price-order-food span:last-child{
+    font-size: 24px;
+    font-weight: 500px;
+
+}
+
+.order-action{
+    display: flex;
+    justify-content: space-between;
+    max-width: 79%;
+    
 }
 
 
