--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,11 @@ a {
 .text_danger {
     color: var(--color_C90000);
 }
-header{
-    height: 100vh;
+
+img {
+    width: 100%;
 }
+
 
 .main_header {
     margin-top: 1rem;
@@ -84,7 +86,7 @@ header{
 .container {
     max-width: 1170px;
     margin: 0 auto;
-    padding: 0 0.5rem;
+    padding: 0 1.5rem;
 }
 
 .navgation {
@@ -139,6 +141,7 @@ header{
     color: var(--color_fff);
     font-weight: 500;
 }
+
 .nav_menu_sidbar {
     position: fixed;
     left: 0;
@@ -161,7 +164,7 @@ header{
     -o-transition: all 500ms ease-in;
 }
 
-#input_menu:checked + label + ul{
+#input_menu:checked+label+ul {
     transform: translateX(0px);
     -webkit-transform: translateX(0px);
     -moz-transform: translateX(0px);
@@ -169,38 +172,44 @@ header{
     -o-transform: translateX(0px);
 }
 
-#close_icon{
+#close_icon {
     display: none;
     color: var(--color_504F4F);
 }
 
-#input_menu:checked + label #close_icon{
+#input_menu:checked+label #close_icon {
     display: block;
 }
 
-#input_menu:checked + label svg:first-child{
+#input_menu:checked+label svg:first-child {
     display: none;
 }
 
 /* header-bottom */
-.header-bottom{
+.header-bottom {
     display: grid;
-    grid-template-columns: repeat(2,auto);
+    grid-template-columns: repeat(2, 1fr);
 }
 
-.content-right-header-bottom{
+.content-right-header-bottom {
 
     align-self: center;
+    width: 86%;
 
 }
-.content-right-header-bottom h1{
+
+.content-left-header-bottom {
+    position: relative;
+}
+
+.content-right-header-bottom h1 {
     color: var(--color_C90000);
     font-size: 48px;
     font-weight: 600;
     line-height: 70px;
 }
 
-.content-right-header-bottom p{
+.content-right-header-bottom p {
     color: #323232;
     font-size: 16px;
     font-weight: 400;
@@ -208,30 +217,168 @@ header{
     max-width: 70%;
 }
 
-.order-food{
+.order-food {
     margin-top: 1.5rem;
 }
-.text-price-order-food{
+
+.text-price-order-food {
     margin-bottom: 1rem;
 }
-.text-price-order-food span:first-child{
+
+.text-price-order-food span:first-child {
     font-size: 16px;
     font-weight: 300px;
 
 }
-.text-price-order-food span:last-child{
+
+.text-price-order-food span:last-child {
     font-size: 24px;
     font-weight: 500px;
 
 }
 
-.order-action{
+.order-action {
+
     display: flex;
     justify-content: space-between;
-    max-width: 79%;
-    
+    max-width: 70%;
+
 }
 
+.button-action-order {
+    max-width: 41%;
+    gap: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    border: 1px solid rgba(241, 241, 241, 0.70);
+    background: #FFF;
+    box-shadow: 0px 10px 17px 0px rgba(112, 144, 176, 0.20);
+    padding: 8px 16px;
+
+
+    max-width: 41%;
+    gap: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--color_rgb_241);
+    background-color: var(--color_fff);
+    border-radius: 100px;
+    padding: 8px 16px;
+    box-shadow: 0 10px 17px 0 var(--color_rgb_122_144_176);
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+
+}
+
+.button-action-order button {
+    background-color: transparent;
+    border: none;
+}
+
+.button-action-order span {
+    font-size: 20px;
+    font-weight: 500;
+    color: #FFC300;
+}
+
+.button-action-order span::before,
+span::after {
+    content: '';
+    display: inline-block;
+    width: 1px;
+    height: 22px;
+    background-color: var(--color_F1F1F1);
+}
+
+.button-action-order span::before {
+    margin-right: 12px;
+}
+
+.button-action-order span::after {
+    margin-left: 12px;
+}
+
+.order-action>button {
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 100px;
+    background: var(--color_FFC300);
+    box-shadow: 0px 20px 20px 0px rgba(112, 144, 176, 0.20);
+    padding: 16px 24px;
+    margin-left: 20px;
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--color_323232);
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+}
+
+.order-action>button svg {
+    width: 24px;
+    height: 24px;
+    margin-right: 12px;
+}
+
+.fixed-box-delivery {
+    position: absolute;
+    left: -6rem;
+    top: 5rem;
+    padding: 12px;
+    text-align: center;
+    border-radius: 50px 50px 0px 50px;
+    border: 1px solid var(--color_F1F1F1);
+    background: rgba(241, 241, 241, 0.40);
+    font-size: 16px;
+    color: var(--color_7D7C7C);
+    -webkit-border-radius: 50px 50px 0px 50px;
+    -moz-border-radius: 50px 50px 0px 50px;
+    -ms-border-radius: 50px 50px 0px 50px;
+    -o-border-radius: 50px 50px 0px 50px;
+}
+
+.fixed-box-delivery>span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 400;
+    color: var(--color_323232);
+}
+
+
+
+
+@media (max-width:1167px) {
+    .order-action {
+        justify-content: start;
+        max-width: 100%;
+    }
+}
+
+@media (max-width:882px) {
+    .fixed-box-delivery {
+        top: -1.5rem;
+
+    }
+
+    .header-bottom {
+        margin-top: 3rem;
+    }
+}
+
+@media (min-width:835px) {
+    .menu-icon {
+        display: none;
+    }
+}
 
 @media (max-width:834px) {
     .navgation {
@@ -251,12 +398,21 @@ header{
 
     }
 
-    
+    .content-right-header-bottom {
+
+        align-self: center;
+        width: 92%;
+
+    }
 
 }
 
-@media (min-width:835px) {
-    .menu-icon {
-        display: none;
+@media (max-width:769px) {
+    .button-action-order {
+        max-width: 35%;
+
     }
+
+
+
 }
