--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: poppins;
-    padding: 8rem;
+    padding-bottom: 8rem;
 }
 
 ul {
@@ -16,7 +16,8 @@ ul {
 a {
     text-decoration: none;
 }
-button{
+
+button {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -74,6 +75,7 @@ button{
     --color_FFF6A3: #FFF6A3;
     --color_E3E3E3: #E3E3E3;
     --color_F1F1F1: #F1F1F1;
+    --color_FFEAE6: #FFEAE6;
 }
 
 .text_danger {
@@ -90,7 +92,7 @@ img {
 }
 
 .container {
-    max-width: 1170px;
+    max-width: 1440px;
     margin: 0 auto;
     padding: 0 1.5rem;
 }
@@ -292,7 +294,8 @@ img {
     color: #FFC300;
 }
 
-.button-action-order>span::before,.button-action-order>span::after {
+.button-action-order>span::before,
+.button-action-order>span::after {
     content: '';
     display: inline-block;
     width: 1px;
@@ -300,11 +303,11 @@ img {
     background-color: var(--color_F1F1F1);
 }
 
-.button-action-order> span::before {
+.button-action-order>span::before {
     margin-right: 12px;
 }
 
-.button-action-order> span::after {
+.button-action-order>span::after {
     margin-left: 12px;
 }
 
@@ -357,19 +360,21 @@ img {
     font-weight: 400;
     color: var(--color_323232);
 }
-.section-food{
+
+.section-food {
     padding: 50px 0;
-    
+
 }
 
-.row-title-section-food h4{
+.row-title-section-food h4 {
     position: relative;
     color: var(--color_C90000);
     font-size: 48px;
     font-weight: 600;
     line-height: 72px;
 }
-.line-bottom-row-title{
+
+.line-bottom-row-title {
     position: absolute;
     width: 137px;
     height: 9px;
@@ -378,15 +383,17 @@ img {
     z-index: -1;
 
 }
-.row_button_category{
+
+.row_button_category {
     display: grid;
-    grid-template-columns: repeat(5,max-content) ;
+    grid-template-columns: repeat(5, max-content);
     column-gap: 10px;
     grid-auto-flow: column;
     overflow-x: auto;
     margin-top: 30px;
 }
-.row_button_category button{
+
+.row_button_category button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -403,15 +410,105 @@ img {
     -moz-border-radius: 100px;
     -ms-border-radius: 100px;
     -o-border-radius: 100px;
-    
+
 }
 
-.button_active_category{
+.button_active_category {
     background-color: var(--color_FFC300) !important;
-    color: var(--color_323232)  !important;
+    color: var(--color_323232) !important;
     font-weight: 600 !important;
 }
 
+/* products */
+
+.products {
+
+    display: grid;
+    margin-top: 30px;
+    gap: 8px;
+    grid-template-columns: repeat(3, 1fr);
+
+
+}
+
+.product-item {
+    padding: 16px;
+    border: 1px solid var(--color_E3E3E3);
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+}
+.product-img{
+    width: 100%;
+    
+    text-align: center;
+}
+.product-img img{
+    width: 80%;
+    
+}
+.product-item-content{
+    margin-top: 17px;
+}
+.product-item-content h4{
+
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    color: var(--color_323232);
+}
+.product-item-content p{
+    color: var(--color_504F4F);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+
+}
+.rank-star{
+    display: flex;
+    align-items: center;
+    margin: 5px 0 0 0;
+
+}
+.rank-star svg{
+    margin: 0 .2rem;
+}
+.rank-star span{
+
+    color: var(--color_7D7C7C);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+}
+
+.product-price{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 12px 0 0 0;
+}
+.product-price span{
+    font-size: 24px;
+    font-weight: 600;
+    color: var(--color_323232);
+    line-height: 21px;
+}
+
+.product-price button{
+    width: 44px;
+    height: 44px;
+    background-color: var(--color_C90000);
+    padding: 5.4px;
+    border-radius: 8px;
+    color: var(--color_FFF6A3);
+    
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
 
 @media (max-width:1167px) {
     .order-action {
@@ -461,32 +558,39 @@ img {
         width: 90%;
 
     }
-    .content-right-header-bottom h1{
+
+    .content-right-header-bottom h1 {
         font-size: 34px;
-        line-height:50px;
+        line-height: 50px;
 
     }
-    .content-right-header-bottom p{
+
+    .content-right-header-bottom p {
         line-height: 22px;
     }
-    .fixed-box-delivery{
+
+    .fixed-box-delivery {
         padding: 10px;
         font-size: 13px;
         top: -19px;
     }
-    .fixed-box-delivery > span{
+
+    .fixed-box-delivery>span {
         font-size: 18px;
     }
-    .order-action{
+
+    .order-action {
         align-items: center;
     }
-    .order-action > button{
+
+    .order-action>button {
         height: 50px;
         padding: 15px;
         font-size: 19px;
     }
-    .button-action-order{
-        gap:10px
+
+    .button-action-order {
+        gap: 10px
     }
 
 }
@@ -494,49 +598,54 @@ img {
 
 @media (max-width:648px) {
     .header-bottom {
-       
+
         grid-template-columns: repeat(1, 1fr);
-        
+
     }
-    .content-right-header-bottom{
+
+    .content-right-header-bottom {
         width: 100%;
         text-align: center;
     }
-    .content-right-header-bottom h1{
+
+    .content-right-header-bottom h1 {
         font-size: 46px;
     }
-    
-    .content-right-header-bottom p{
-        
-        max-width:100%;
+
+    .content-right-header-bottom p {
+
+        max-width: 100%;
         font-size: 18px;
         margin-top: 12px;
 
     }
-    .order-action{
+
+    .order-action {
         width: 100%;
         justify-content: center;
     }
-    .fixed-box-delivery{
+
+    .fixed-box-delivery {
         position: fixed;
         width: 30%;
     }
-    
 
-    .order-food-desktop{
+
+    .order-food-desktop {
         display: none;
     }
 
-    .order_food_mobile{
+    .order_food_mobile {
         margin-top: 3rem;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-   
+
 }
-@media (min-width:649px){
-    .order-food-mobile{
+
+@media (min-width:649px) {
+    .order-food-mobile {
         display: none;
     }
 }
