--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: poppins;
     padding-bottom: 8rem;
+   
 }
 
 ul {
@@ -98,7 +99,7 @@ img {
 
 .container {
     max-width: 1170px;
-    margin: 0 0.5rem;
+    margin: 0 auto;
     padding: 0 0.5rem;
 }
 
@@ -428,10 +429,13 @@ img {
 
 .products {
 
+    width: 100%;
     display: grid;
     margin-top: 30px;
     gap: 30px;
-    grid-template-columns: repeat(3, 370px);
+    grid-template-columns: repeat(auto-fit,minmax(270px,1fr));
+    justify-content: center;
+    position: relative;
 
 
 }
@@ -446,6 +450,7 @@ img {
     -o-border-radius: 12px;
     position: relative;
 }
+
 
 .product-img{
    
@@ -540,6 +545,142 @@ img {
     -o-border-radius: 8px;
 }
 
+.product-see-all{
+    width: 1170px;
+   
+    text-align: center;
+    color: #323232;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+/* sale-off */
+.sale-off{
+    margin-top: 50px;
+}
+
+.row-sale-of-title{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.row-sale-of-title h4{
+    color: var(--color_C90000);
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 72px;
+    position: relative;
+
+    
+}
+.row-sale-of-title h4::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 12px;
+    background-color: #FFF6A3;
+   width: 100%;
+   top: 40px;
+   z-index: -1;
+
+}
+.row-sale-off-items{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(370px,1fr));
+    gap: 20px;
+
+}
+.sale-food-item{
+    background-color: var(--color_E3E3E3);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    border: 1px solid var(--color_E3E3E3);
+}
+
+.sale-off-category{
+    color: var(--color_323232);
+    display: grid;
+    grid-template-columns: 100px auto;
+    align-items: center;
+    
+
+    
+}
+.sale-off-category h6{
+    font-size: 16px;
+    font-weight: 400;
+   
+
+}
+ .sale-off-category-line{
+   
+    height: 0.25px;
+    background-color: var(--color_7D7C7C);
+ 
+    
+
+}
+.sale-off-content{
+    width: 100%;
+    position: relative;
+    padding: 32px 0 32px 32px;
+}
+.sale-off-content img{
+    position: absolute;
+    object-fit: none;
+    width: 100%;
+    right: -120px;
+    top: 10px;
+}
+.sale-off-content h5{
+    font-size: 32px;
+    
+    font-weight: 600;
+    color: var(--color_C90000);
+    line-height: 48px;
+}
+.sale-off-content p{
+    font-size: 16px;
+    color: var(--color_504F4F);
+    font-weight: 400;
+    line-height: 24px;
+    width: 50%;
+}
+.sale-off-content .price{
+    padding: 8px 0;
+    color: var(--color_504F4F);
+    font-size: 16px;
+}
+
+.sale-off-content .price span{
+    color: var(--color_C90000);
+    font-size: 24px;
+    font-weight: 600;
+}
+.sale-off-content button{
+    border: none;
+    background-color: var(--color_504F4F);
+    color: var(--color_F1F1F1);
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 20px;
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    margin-top: 20px;
+}
+
+
 @media (max-width:1167px) {
     .order-action {
         justify-content: start;
@@ -624,7 +765,7 @@ img {
     }
 
     .products {
-        grid-template-columns: repeat(2, auto);
+        /* grid-template-columns: repeat(2, 1fr); */
         gap: 10px;
         
     }
@@ -714,7 +855,7 @@ img {
 
 @media (max-width:500px){
     .products {
-        grid-template-columns: repeat(1, auto);
+        /* grid-template-columns: repeat(1, 1fr); */
         gap: 10px;
         
     }
